@@ -37,7 +37,7 @@
 	        "name": "OF OVS",
 	        "type": "emulab-xen",
 	        "image": "urn:publicid:IDN+emulab.net+image+emulab-ops:Ubuntu12-64-OVS",
-	        "icon": "https://www.emulab.net/protogeni/jacks-stable/images/router.svg"
+	        "icon": "https://portal.geni.net/images/router.svg"
             }
         ],
 
