@@ -52,8 +52,12 @@ $portal_max_slice_renewal_days = 185;
 // Portal version
 $portal_version = "2.24";
 
-// URL to the Flack SWF. Used in flack.php
-$flack_url = "https://www.emulab.net/protogeni/flack3/flack.swf";
+// URL to the Flack loader. Used in flack.php
+$flack_url = "https://www.emulab.net/protogeni/flack-stable/loader.js";
+
+// URL to the Jacks root
+// Stable
+$jacks_stable_url = "https://www.emulab.net/protogeni/jacks-stable/js/jacks";
 
 //----------------------------------------------------------------------
 // Set error level to include user errors (generated by the portal).
