@@ -361,7 +361,7 @@ print $jfed_script_text;
 ?>
 
 <!-- Jacks JS and App CSS -->
-<script src="//www.emulab.net/protogeni/jacks-stable/js/jacks"></script>
+<script src="<?php echo $jacks_stable_url;?>"></script>
 
 <!-- This belongs in the header, probably -->
 <script>
