@@ -6,6 +6,10 @@
 
 == 2.24 ==
  * Remove debug printouts in do-edit-slice-member. (#1242)
+ * Prepare to be runnable without access to emulab.net. (#1251)
+  * Host the Jacks router.svg locally
+  * Make the Jacks URL be a value from settings.php
+  * (Re) make the Flack URL be a value from settings.php
 
 == 2.23 ==
  * Grab latest topology from Jacks before calling validateSubmit from ReserveResources (#1126)
